Compar: added Lilac gene class comparison